Fixed overflow in "all letters" button

--- a/wcfsetup/install/files/style/ui/button.scss
+++ b/wcfsetup/install/files/style/ui/button.scss
@@ -119,6 +119,7 @@ a.button {
 			
 			> a {
 				display: block;
+				min-width: min-content;
 				text-align: center;
 			}
 		}
